--- a/projectAgri/views/signup.ejs
+++ b/projectAgri/views/signup.ejs
@@ -1,193 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title> Hamro Krishi</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css">
+    </head>
+        <body class style="background:#e4dfda">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1>Hamro Krishi</h1>
+                        
+                        <img src = "/images/car1.jpg" class="img img-fluid"  style = "margin-top: 60px">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Freelancer - Start Bootstrap Theme</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/stylesheets/style.css" rel="stylesheet" />
-</head>
-
-<body class style="background:#e4dfda">
-    <nav class="navbar navbar-expand-lg bg-primary text-uppercase fixed-top" id="mainNav">
-        <!-- top nav -->
-        <div class="d-flex flex-row-reverse p-1  bg-secondary justify-content-between kd-on fixed-top">
-            <div class="p-2 kd-on">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger" href="/users/login">login</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger" href="/users/signup">Signup</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- top nav ends-->
-
-        <!-- bottom nav -->
-        <div class="container pt-5 py-0 mb-0">
-            <a class="navbar-brand js-scroll-trigger" href="/">Logo</a>
-            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link  px-0 px-lg-3 rounded js-scroll-trigger" href="/">HOME</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0 px-lg-3 rounded js-scroll-trigger" href="./searchproducts.html">PRODUCTS</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0  rounded js-scroll-trigger" href="./aboutus.html">ABOUT</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- bottom nav ends-->
-    </nav>
-    <!-- Navigation Ends-->
-
-    <div class="container masthead ">
-        <div class="row">
-
-
-            <div class="col-md-6 mt-4">
-
-                <img src="/images/rice.jpg" class="img img-fluid">
-
-            </div>
-            <div class="col-md-6">
-                <div class="card" style="margin-top:20px">
-                    <div class="card-header">
-                        <h2> <b>Sign Up</b></h2>
                     </div>
+                    <div class="col-md-4">
+                        <div class="card" style="margin-top:20px">
+                            <div class="card-header">
+                                <h2> <b>Sign Up</b></h2>
+                            </div>
+                            <!-- <% if(typeof alerts != "undefined" ){ %>
+                                <% alerts.forEach(function(error) { %>
 
-                    <div class="card-body">
-                        <form action="/action_page.php">
-                            <p class="lead mb-0">I am here to:</p>
-                            <div class="form-group">
-                                <div class="radio custom-control custom-radio">
-
-                                    <div class="form-group d-inline-block col-lg-2 ml-0 pl-0">
-                                        <input type="radio" class="custom-control-input" name="i" value="keep" id="i1">
-                                        <label class="custom-control-label" for="i1">Buy</label>
+                                    <div class="alert alert-primary" role="alert">
+                                        <% error.msg %>
                                     </div>
-                                    <div class="form-group d-inline-block col-lg-3">
-                                        <input type="radio" class="custom-control-input" value="auto" name="i" id="i2">
-                                        <label class="custom-control-label" for="i2">Sell</label>
-                                    </div>
-                                    <div class="form-group d-inline-block col-lg-2">
-                                        <input type="radio" class="custom-control-input" name="i" value="manual" id="i3">
-                                        <label class="custom-control-label" for="i3">Both</label>
-                                    </div>
-
-                                </div>
-                                <div class="form-group">
-                                    <label for="fname">First name:<br></label>
+                                <% }) %>
+                            <% } %> -->
+                            <div class="card-body">
+                                <form action="/users/signup" method="POST">
+                              
+                                  <div class="form-group">
+                                    <label for="">I am here to</label>
+        
+                                    <input type="radio" id="buy" name="action" value="buy">
+                                    <label for="Buy">Buy</label>
+                                    <input type="radio" id="sell" name="action" value="sell">
+                                    <label for="Sell">Sell</label>
+                                    <input type="radio" id="both" name="action" value="both">
+                                    <label for="Both">Both</label>
+                                  </div> 
+                                   <div class="form-group">
+                                    <label for="fname">First name*<br></label>
                                     <input type="text" class='form-control' id="fname" name="fname" value="">
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="lname">Last name:<br></label>
+                                   </div>
+                
+                                   <div class="form-group">
+                                    <label for="lname">Last name*<br></label>
                                     <input type="text" id="lname" class='form-control' name="lname" value="">
-                                </div>
-                                <div class="form-group">
-                                    <label for="mobilenumber">Mobile Number:<br></label>
+                                   </div>
+                                   <div class="form-group">
+                                    <label for="mobilenumber">Mobile Number*<br></label>
                                     <input type="text" id="mobilenumber" class='form-control' name="mobilenumber" value=""><br>
-                                </div>
-                                <div class="form-group">
-                                    <label for="citizenship">Citizenship Number:<br></label>
+                                      </div>
+                                     <div class="form-group">
+                                     <label for="citizenship">Citizenship Number*<br></label>
                                     <input type="text" id="citizenship" class='form-control' name="citizenship" value=""><br>
-                                </div>
-                                <div class="form-group">
-                                    <label for="username">Username:<br></label>
+                                     </div>
+                                    <div class="form-group">
+                                    <label for="address">Address*<br></label>
+                                    <input type="text" id="address" class='form-control' name="address" value=""><br>
+                                    </div>
+                                     <div class="form-group">
+                                     <label for="email">Email*<br></label>
+                                     <input type="email" id="email" class='form-control' name="email" value=""><br>
+                                     </div>
+                                     <div class="form-group">
+                                    <label for="username">Username*<br></label>
                                     <input type="text" id="username" class='form-control' name="username" value=""><br>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Password:<br></label>
+                                    </div>
+                                    <div class="form-group">
+                                    <label for="password">Password*<br></label>
                                     <input type="password" id="password" class='form-control' name="password" value=""><br><br>
+                                    <% if (locals.errors){ %> 
+                                        <p><% errors.msg %></p> <!---nt showing-->
+                                    <% } %>
+                                    </div>
+                                    <div class="form-group">
+                                    <label for="password">Password*<br></label>
+                                    <input type="password" id="password2" class='form-control' name="password2" value=""><br><br>
+                                    </div>
+                                          
+                                              <p><div class="form-group">
+                                                <input type="radio" id="buy" name="action" value="buy">
+                                                <label for="">I agree with Company name, terms and policies.</label>
+                                    <br><br>
+                
+                                  
+                                  <div class="form-group">
+                                    <input type="submit" class='btn btn-primary' value="Sign Up">
                                 </div>
-                                <div class="form-group">
-                                    <label for="password">Repeat Password:<br></label>
-                                    <input type="password" id="password" class='form-control' name="password" value="">
-                                </div>
-
-
-                                <div class="form-group ml-4 pt-4">
-                                    <input type="checkbox" class="custom-control-input" name="i" value="keep" id="hell">
-                                    <label class="custom-control-label" for="hell">I agree with Company name, terms and policies.</label>
-                                </div>
-
-                                <div class="form-group pt-3">
-                                    <input type="button" class='btn btn-primary' value="Sign Up">
-                                </div>
-                        </form>
-
+                            </form>
+         
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-2">
+                    <div class="col-md-2">
 
+                    </div>
                 </div>
+               
             </div>
-
-        </div>
-    </div>
-    <!-- Footer-->
-    <footer class="footer text-center">
-        <div class="container">
-            <div class="row">
-                <!-- Footer About Text-->
-                <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">About Us</h4>
-                    <p class="lead mb-0">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem nam sed laboriosam, molestias necessitatibus eius impedit illum sit soluta id beatae sint itaque ipsam voluptas officiis voluptate? Harum, excepturi illo.
-                        <a href="#">Link</a> .
-                    </p>
-                </div>
-                <!-- Footer Location-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Contact Us</h4>
-                    <p class="lead mb-0">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit molestias nam recusandae vero doloribus harum fugiat similique non! Veritatis beatae esse quo vitae ducimus molestiae, aperiam aspernatur perspiciatis in rerum.
-                        <br />
-                    </p>
-                </div>
-
-                <!-- Footer Social Icons-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Follow Us</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-    <!-- Copyright Section-->
-    <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright ©Hamro Krisi Ramro Krisi</small></div>
-    </div>
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
-    <div class="scroll-to-top d-lg-none position-fixed">
-        <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
-    </div>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Contact form JS-->
-    <script src="assets/mail/jqBootstrapValidation.js"></script>
-    <script src="assets/mail/contact_me.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-</body>
-
+      
+        </body>
+    
 </html>
