File structure changes

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link  px-0 px-lg-3 rounded js-scroll-trigger" href="/">HOME</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0 px-lg-3 rounded js-scroll-trigger" href="./searchproducts.html">PRODUCTS</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0 px-lg-3 rounded js-scroll-trigger" href="/products/searchProducts">PRODUCTS</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0  rounded js-scroll-trigger" href="./aboutus.html">ABOUT</a></li>
                 </ul>
             </div>
