--- a/views/index.ejs
+++ b/views/index.ejs
@@ -171,14 +171,14 @@
                         <!-- 1 -->
                         <% productList.forEach(function (products, id) {%>
                             <div class="col-auto mb-3" style="width: 21rem;">
-                                <img class="card-img-top" src= "<%= products.img %>" alt="Card image cap">
+                                <img class="card-img-top" src="<%= products.img %>" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">
                                         <%= products.name %>
                                     </h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
                                     </p>
-                                    <a href="#" class="stretched-link">Go somewhere</a>
+                                    <a href="products/item/<%= products.id%>" class="stretched-link">Go somewhere</a>
                                 </div>
                             </div>
                             <% }) %>
