--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,4 +1,5 @@
 <% include partials/nav %>
+<html>
 <body>
     <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit/Delete Items</h2>
     <div class="container">
@@ -32,9 +33,8 @@
                 <button type="button" class="btn btn-danger " name="action">Delete</button>
             </div>
         </form>
+        </div>
 </body>
 
 </html>
-</div>
 <% include partials/footer %>
-</body>
