--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2480,8 +2480,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: #00af66;
+    border-color: #00af66;
 }
 
 .btn-primary:hover {
@@ -2521,8 +2521,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
     color: #fff;
-    background-color: #2c3e50;
-    border-color: #2c3e50;
+    background-color: #00af66;
+    border-color: #00af66;
 }
 
 .btn-secondary:hover {
@@ -4326,8 +4326,8 @@ input[type=button].btn-block {
 
 .navbar-brand {
     display: inline-block;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
     margin-right: 1rem;
     font-size: 1.25rem;
     line-height: inherit;
@@ -6700,7 +6700,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #1abc9c !important;
+    background-color: #00af66 !important;
 }
 
 a.bg-primary:hover,
@@ -10188,7 +10188,7 @@ a.text-dark:focus {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-    color: #1abc9c;
+    color: #d6f8b8;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active,
@@ -10238,7 +10238,7 @@ a.text-dark:focus {
 }
 
 .masthead {
-    padding-top: calc(6rem + 54px);
+    padding-top: calc(6rem + 48px);
     padding-bottom: 6rem;
 }
 
@@ -10257,7 +10257,7 @@ a.text-dark:focus {
 
 @media (min-width: 992px) {
     .masthead {
-        padding-top: calc(6rem + 52px);
+        padding-top: calc(6rem + 49px);
         padding-bottom: 6rem;
     }
     .masthead .masthead-heading {
