--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Hamro Krisi</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!-- Font Awesome icons (free version)-->
@@ -25,8 +25,8 @@
         <div class="d-flex flex-row-reverse p-1  bg-secondary justify-content-between kd-on fixed-top">
             <div class="p-2 kd-on">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger" href="/users/login">login</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger" href="/users/signup">Signup</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger text-white" href="/users/login">login</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="px-0 px-lg-2 rounded js-scroll-trigger text-white" href="/users/signup">Signup</a></li>
                 </ul>
             </div>
         </div>
@@ -34,16 +34,28 @@
 
         <!-- bottom nav -->
         <div class="container pt-5 py-0 mb-0">
-            <a class="navbar-brand js-scroll-trigger" href="/">Logo</a>
+            <a class="navbar-brand js-scroll-trigger" href="/">Hamro Krisi</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link  px-0 px-lg-3 rounded js-scroll-trigger" href="/">HOME</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0 px-lg-3 rounded js-scroll-trigger" href="/products/searchProducts">PRODUCTS</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link px-0  rounded js-scroll-trigger" href="./aboutus.html">ABOUT</a></li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link  px-0 px-lg-3 rounded js-scroll-trigger" href="/">
+                            <h5>HOME</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link px-0 px-lg-3 rounded js-scroll-trigger" href="/products/searchProducts">
+                            <h5>PRODUCTS</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link px-0  rounded js-scroll-trigger" href="./about">
+                            <h5>ABOUT</h5>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -51,5 +63,3 @@
     </nav>
     <!-- Navigation Ends-->
 </body>
-
-    
