--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -12,13 +12,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="grapes.jpg" alt="First slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="grapes.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="grapes.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -55,7 +55,7 @@
                 </div>
                 <h5>Stock : 20</h5>
                 <label for="quantity">Quantity : </label><input type="number" name="qty" id="qty" value="1" min="1" max="10000" style="margin-left: 10px;"><br>
-                <button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button>
+                <a href="/products/cart"><button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button></a>
                 <button type="submit" class="btn btn-primary" style="border-radius: 20px; margin: 8px;">Message</button>
             </div>
         </div>
@@ -67,14 +67,14 @@
                 <h2>Farmer-Detail</h2>
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="./car1.jpg" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
+                        <img src="../public/images/avatar.png" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
                     </div>
                     <div class="col-md-8">
-                        <p>Name:</p>
-                        <p>Address:</p>
-                        <p>Email:</p>
-                        <p>Phone:</p>
-                        <p>Description:</p>
+                        <p><b>Name:</b> Sumi Bhatta</p>
+                        <p><b>Address:</b> Kathmandu</p>
+                        <p><b>Email:</b> sumibhatta@gmail.com</p>
+                        <p><b>Phone:</b> 9843297064</p>
+                        <p><b>Description:</b> I grow crops, fresh and seasonal.</p>
                     </div>
                 </div>
 
@@ -83,57 +83,7 @@
         </div>
     </div>
     <!-- Footer-->
-    <footer class="footer text-center">
-        <div class="container">
-            <div class="row">
-                <!-- Footer About Text-->
-                <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">About Us</h4>
-                    <p class="lead mb-0">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem nam sed laboriosam, molestias necessitatibus eius impedit illum sit soluta id beatae sint itaque ipsam voluptas officiis voluptate? Harum, excepturi illo.
-                        <a href="#">Link</a> .
-                    </p>
-                </div>
-                <!-- Footer Location-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Contact Us</h4>
-                    <p class="lead mb-0">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit molestias nam recusandae vero doloribus harum fugiat similique non! Veritatis beatae esse quo vitae ducimus molestiae, aperiam aspernatur perspiciatis in rerum.
-                        <br />
-                    </p>
-                </div>
+    <% include partials/footer %>
+        </body>
 
-                <!-- Footer Social Icons-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Follow Us</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-    <!-- Copyright Section-->
-    <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright ©Hamro Krisi Ramro Krisi</small></div>
-    </div>
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
-    <div class="scroll-to-top d-lg-none position-fixed">
-        <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
-    </div>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Contact form JS-->
-    <script src="assets/mail/jqBootstrapValidation.js"></script>
-    <script src="assets/mail/contact_me.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    </body>
-
-    </html>
+        </html>
