--- a/views/index.ejs
+++ b/views/index.ejs
@@ -178,7 +178,7 @@
                                     </h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
                                     </p>
-                                    <a href="products/item/<%= products.id%>" class="stretched-link">Go somewhere</a>
+                                    <a href="products/item/<%= products._id %>" class="stretched-link">Go somewhere</a>
                                 </div>
                             </div>
                             <% }) %>
