--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -12,13 +12,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="grapes.jpg" alt="First slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="grapes.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="grapes.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -31,31 +31,34 @@
                     </a>
                 </div>
             </div>
-
-            <div class="col-md-4">
-                <h2>
-                    <%= productitem.name %>
-                </h2>
-                <span>Price: <%= productitem.price %></span><br>
-                <div class="row">
-                    <div class="col-md-2">
-                        <label for="weight">Weight: </label>
+            <form action="/products/cart/<%= productitem._id %>" method = "GET">
+                <div class="col-md-4">
+                    <h2>
+                        <%= productitem.name %>
+                    </h2>
+                    <span>Price: <%= productitem.price %></span><br>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <label for="weight">Weight: </label>
+                        </div>
+                        <div class="col-md-6" style="margin-left: 6px;">
+                            <select>
+                                    <option selected>Select Weight:</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                        </div>
                     </div>
-                    <div class="col-md-6" style="margin-left: 6px;">
-                        <select>
-                                <option selected>Select Weight:</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                    </div>
-                </div>
-                <h5>Stock : 20</h5>
-                <label for="quantity">Quantity : </label><input type="number" name="qty" id="qty" value="1" min="1" max="10000" style="margin-left: 10px;"><br>
-                <button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button>
+                    <h5>Stock : <%= productitem.stock %></h5>
+                    <label for="quantity">Quantity : </label><input type="number" name="qty" id="qty" value="1" min="1" max="10000" style="margin-left: 10px;"><br>
+                    
+                    <button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button>
+                </form>
+                
                 <button type="submit" class="btn btn-primary" style="border-radius: 20px; margin: 8px;">Message</button>
             </div>
         </div>
@@ -67,14 +70,14 @@
                 <h2>Farmer-Detail</h2>
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="./car1.jpg" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
+                        <img src="<%= productitem.user.img %>" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
                     </div>
                     <div class="col-md-8">
-                        <p>Name:</p>
-                        <p>Address:</p>
-                        <p>Email:</p>
-                        <p>Phone:</p>
-                        <p>Description:</p>
+                        <p>Name : <%= user.username %></p>
+                        <p>Address: <%= user.address %></p>
+                        <p>Email: <%= user.email %></p>
+                        <p>Phone: <%= user.mobilenumber %></p>
+                        <p><a href="/users/farmerProfile/<%= user._id %>">See More</a></p>
                     </div>
                 </div>
 
