Products-added-to-cart

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -9,17 +9,18 @@
 
                 <!--Grid column-->
                 <div class="col-lg-8">
-
+                    <% var totalPrice = 0; %>
+                    <% order_obj.forEach( function(order) { %>              
                     <!-- Card -->
                     <div class="mb-3">
                         <div class="pt-4 wish-list">
 
-                            <h5 class="mb-4">Cart (<span>2</span> items)</h5>
+                            <h5 class="mb-4">Cart (<span><%= order_obj.length %></span> items)</h5>
 
                             <div class="row mb-4">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                                        <img class="img-fluid w-100" src="https://previews.123rf.com/images/alexshyripa/alexshyripa1704/alexshyripa170400239/76548461-traditional-food-uncooked-rice-in-a-bowl-on-a-wooden-background.jpg" alt="Sample">
+                                        <img class="img-fluid w-100" src="<%= order.product.img %>" alt="Sample">
                                     </div>
                                 </div>
                                 <div class="col-md-7 col-lg-9 col-xl-9">
@@ -27,15 +28,15 @@
                                         <div class="d-flex justify-content-between">
                                             <div>
                                                 <h5>
-                                                    RICE
+                                                    <%= order.product.name %>
                                                 </h5>
-                                                <p class="mb-3 text-muted text-uppercase small">Basmati Fine Grain</p>
-                                                <p class="mb-2 text-muted text-uppercase small">Per Kilo</p>
+                                                <p class="mb-3 text-muted text-uppercase small"><%= order.product.name %></p>
+                                                <p class="mb-2 text-muted text-uppercase small">Rs. <%= order.product.price %> Per Kilo</p>
                                             </div>
                                             <div>
                                                 <div class="def-number-input number-input safari_only mb-0 w-100">
                                                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                                    <input class="quantity" min="0" name="quantity" value="1" type="number">
+                                                    <input class="quantity" min="0" name="quantity" value="<%= order.amount %>" type="number">
                                                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
                                                 </div>
                                                 <small id="passwordHelpBlock" class="form-text text-muted text-center">(Per unit)</small>
@@ -43,22 +44,24 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div>
-                                                <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                                                <a href="/products/order/remove/<%= order._id %>" type="button" class="card-link-secondary small text-uppercase mr-3"><i
                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                 <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                             </div>
-                                            <p class="mb-0"><span><strong id="summary">Rs. 17.99</strong></span></p class="mb-0">
+                                            <p class="mb-0"><span><strong id="summary">Rs. <%= order.product.price * order.amount %></strong></span></p class="mb-0">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <hr class="mb-4">
-
-                            <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Do not delay the purchase, adding items to your cart does not mean booking them.</p>
+                            <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i>Do not delay the purchase, adding items to your cart does not mean booking them.</p>
 
                         </div>
                     </div>
+                    `   <% totalPrice = totalPrice + (order.product.price * order.amount) %>
+                    <% }) %>
+                    
                     <!-- Card -->
 
                     <!-- Card -->
@@ -101,7 +104,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-2 pb-0">
                                     Temporary amount
-                                    <span>$25.98</span>
+                                    <span>Rs. <%= totalPrice %></span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center px-2">
                                     Shipping
@@ -118,7 +121,7 @@
                                 </li>
                             </ul>
 
-                            <button type="button" class="btn btn-primary btn-block">go to checkout</button>
+                            <button type="button" class="btn btn-primary btn-block"><a href="/products/checkout">Go to Checkout!</a></button>
 
                         </div>
                     </div>
