--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-                <h5>Stock : 20</h5>
+                <h5>Stock : <%= productitem.stock %></h5>
                 <label for="quantity">Quantity : </label><input type="number" name="qty" id="qty" value="1" min="1" max="10000" style="margin-left: 10px;"><br>
                 <a href="/products/cart"><button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button></a>
                 <button type="submit" class="btn btn-primary" style="border-radius: 20px; margin: 8px;">Message</button>
