--- a/views/farmerProfile.ejs
+++ b/views/farmerProfile.ejs
@@ -52,7 +52,7 @@
                         <img class="card-img-top" src="<%= product.img %>" alt="Card image cap">
 
                         <div class="card-body">
-                            <h5 class="card-title"><%= product.productName %></h5>
+                            <h5 class="card-title"><%= product.name %></h5>
                             <p class="card-text"><%= product.description %>
                             </p>
                             <p class="card-text">Stock : <%= product.stock %>
