--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -1,32 +1,40 @@
 <% include partials/nav %>
+<html>
 <body>
     <h2 class=" masthead mt-5 mb-0 pb-5 page-section-heading text-center text-secondary">Edit/Delete Items</h2>
     <div class="container">
-        <form method="POST" action="/products/update/<%=productitem._id%>">
+        <form method="POST" action="/products/update/<%=productitem._id%>"  enctype="multipart/form-data">
             <div class="form-group">
-                <label for="title">Product Name:</label>
-                <input type="string" class="form-control" id="title" name="title" placeholder="Enter title" value="">
+                <label for="productName">Product Name:</label>
+                <input type="string" class="form-control" id="productName" name="productName" placeholder="Enter product name" value="<%= productitem.name %>">
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
-                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value=" ">
+                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value="<%= productitem.category %>">
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value=" ">
+                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value="<%= productitem.description %>">
             </div>
             <div class="form-group">
-                <label for="sth">Idon't know:</label>
-                <input type="string" class="form-control" id="sth" name="sth" placeholder="sth" value=" ">
+                <label for="stock">Stock:</label>
+                <input type="number" class="form-control" id="stock" name="stock" placeholder="Stock" value="<% productitem.stock %>">
+            </div>
+            <div class="form-group">
+                <label for="price">Price:</label>
+                <input type="number" class="form-control" id="price" name="price" placeholder="Enter price" value="<%=productitem.price %>">
+            </div>
+            <div class="form-group">
+                <label for="img">Image:</label>
+                <input type="file" name="myImage" value = "<%= productitem.img %>">
             </div>
             <div class="mb-3">
-                <button type="submit " class="btn btn-primary mr-2" name="action">Submit</button>
-                
+                <button type="submit" class="btn btn-primary mr-2" name="action">Submit</button>
+                <button type="button" class="btn btn-danger " name="action">Delete</button>
             </div>
         </form>
+        </div>
 </body>
 
 </html>
-</div>
 <% include partials/footer %>
-</body>
