--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -78,9 +78,9 @@
                                     <input type="password" id="password2" class='form-control' name="password2" value=""><br><br>
                                 </div>
 
-                                <p>
+                        
                                     <div class="form-group">
-                                        <input type="radio" id="buy" name="action" value="buy">
+                                        <input type="radio" >
                                         <label for="">I agree with Company name, terms and policies.</label>
                                         <br><br>
 
