--- a/views/farmerProfile.ejs
+++ b/views/farmerProfile.ejs
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <% if (current_user.action == "sell" ) {%>
+        <% if (currentUser.action == "sell" ) {%>
         <div class="container col-md-12 ml-5 mt-5 mb-5">
             <div class="row">
                 <button type="button" class="btn btn-primary col-md-3 mr-5 p-3">Message</button>
