--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -10,12 +10,12 @@
                 <!--Grid column-->
                 <div class="col-lg-8">
                     <% var totalPrice = 0; %>
-                    <% order_obj.forEach( function(order) { %>              
+                    <% orderObj.forEach( function(order) { %>              
                     <!-- Card -->
                     <div class="mb-3">
                         <div class="pt-4 wish-list">
 
-                            <h5 class="mb-4">Cart (<span><%= order_obj.length %></span> items)</h5>
+                            <h5 class="mb-4">Cart (<span><%= orderObj.length %></span> items)</h5>
 
                             <div class="row mb-4">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
