--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -6,27 +6,27 @@
         <form method="POST" action="/products/update/<%= productitem._id %>"  enctype="multipart/form-data">
             <div class="form-group">
                 <label for="productName">Product Name:</label>
-                <input type="string" class="form-control" id="productName" name="productName" placeholder="Enter product name" value="<%= productitem.name %>">
+                <input type="string" class="form-control" id="productName" name="productName" placeholder="Enter product name" value="<%= productItem.name %>">
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
-                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value="<%= productitem.category %>">
+                <input type="string" class="form-control" id="category" name="category" placeholder="Category" value="<%= productItem.category %>">
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value="<%= productitem.description %>">
+                <input type="string" class="form-control" id="description" name="description" placeholder="Enter description" value="<%= productItem.description %>">
             </div>
             <div class="form-group">
                 <label for="stock">Stock:</label>
-                <input type="number" class="form-control" id="stock" name="stock" placeholder="Stock" value="<% productitem.stock %>">
+                <input type="number" class="form-control" id="stock" name="stock" placeholder="Stock" value="<% productItem.stock %>">
             </div>
             <div class="form-group">
                 <label for="price">Price:</label>
-                <input type="number" class="form-control" id="price" name="price" placeholder="Enter price" value="<%=productitem.price %>">
+                <input type="number" class="form-control" id="price" name="price" placeholder="Enter price" value="<%=productItem.price %>">
             </div>
             <div class="form-group">
                 <label for="img">Image:</label>
-                <input type="file" name="myImage" value = "<%= productitem.img %>">
+                <input type="file" name="myImage" value = "<%= productItem.img %>">
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary mr-2" name="action">Submit</button>
