--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -12,13 +12,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="<%= productitem.img %>" alt="First slide">
+                            <img class="d-block w-100" src="<%= productItem.img %>" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Second slide">
+                            <img class="d-block w-100" src="<%= productItem.img %>" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="<%= productitem.img %>" alt="Third slide">
+                            <img class="d-block w-100" src="<%= productItem.img %>" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -31,12 +31,12 @@
                     </a>
                 </div>
             </div>
-            <form action="/products/cart/<%= productitem._id %>" method = "GET">
+            <form action="/products/cart/<%= productItem._id %>" method = "GET">
                 <div class="col-md-4">
                     <h2>
-                        <%= productitem.name %>
+                        <%= productItem.name %>
                     </h2>
-                    <span>Price: <%= productitem.price %></span><br>
+                    <span>Price: <%= productItem.price %></span><br>
                     <div class="row">
                         <div class="col-md-2">
                             <label for="weight">Weight: </label>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-                <h5>Stock : <%= productitem.stock %></h5>
+                <h5>Stock : <%= productItem.stock %></h5>
                 <label for="quantity">Quantity : </label><input type="number" name="qty" id="qty" value="1" min="1" max="10000" style="margin-left: 10px;"><br>
                 <button type="submit" class="btn btn-success" style="border-radius: 20px; margin: 8px;">Add to cart</button>
                 <button type="submit" class="btn btn-primary" style="border-radius: 20px; margin: 8px;">Message</button>
@@ -68,7 +68,7 @@
                 <h2>Farmer-Detail</h2>
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="<%= productitem.user.img %>" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
+                        <img src="<%= productItem.user.img %>" alt="" style="border-radius: 50%; width: 80px;height: 80px;">
                     </div>
                     <div class="col-md-8">
                         <p>Name : <%= user.username %></p>
